--- a/index.qmd
+++ b/index.qmd
@@ -1,4 +1,6 @@
-# EMSE 4571 / 6571<br>Intro to Programming for Analytics<br>Spring 2023
+---
+title: "EMSE 6035:<br>Marketing Analytics for Design Decisions<br>(Fall 2022)"
+---
 
 ::: {.grid}
 
