--- a/software.qmd
+++ b/software.qmd
@@ -13,8 +13,8 @@
 
 4. If you have a Mac, install [XQuartz](https://www.xquartz.org/). This is needed for making some figures and is only for Mac (if you're on Windows or Linux, skip this step).
 
-6. Sign up for [Posit Cloud](https://posit.cloud/plans/free) (the free version). It's basically the same thing as RStudio, but accessible via a web browser. If things aren't working on your computer, this is a great backup to quickly get back to working in RStudio. 
+5. Sign up for [Posit Cloud](https://posit.cloud/plans/free)^["Posit" is the company that makes "RStudio", the software we'll use to work with R.] (the free version). It's basically the same thing as RStudio, but accessible via a web browser. If things aren't working on your computer, this is a great backup to quickly get back to working in RStudio. 
 
-> For reference, "Posit" is the company that makes "RStudio", the software we'll use to work with R.
+6. You'll need to install some R packages in RStudio that we will use throughout the semester. To do so, open RStudio then copy-paste [this code](../content/packages.R) into the console and press Return. This will install all the packages listed in the file.
 
 That's it - you're all set for class!
