--- a/syllabus.qmd
+++ b/syllabus.qmd
@@ -1,12 +1,10 @@
 ---
 title: Syllabus
 toc: true
-toc-location: right
 ---
 
-```{r}
-#| echo: false
-source("_common.R")
+```{r setup, echo=FALSE, message=FALSE, warning=FALSE}
+source(here::here("R", "settings.R"))
 ```
 
 # Course Information
@@ -14,14 +12,28 @@ source("_common.R")
 <div style="width:600px">
 Instructor | Course
 ---|---
-<i class="bi-person-fill"></i> John Paul Helveston | <i class="bi-calendar-fill"></i> {{< var weekday >}}
-<i class="bi-building-fill"></i> Science & Engineering Hall, 2830 | <i class="bi-geo-alt-fill"></i> [{{< var room >}}]({{< var room_url >}})
-<i class="bi-telephone-fill"></i> +1 (202) 994-7173 | <i class="bi-calendar-week-fill"></i> {{< var dates >}}
-<i class="bi-envelope-fill"></i> [{{< var email >}}](mailto:{{< var email >}}) | <i class="bi-clock-fill"></i> {{< var time >}}
-<i class="bi-twitter"></i> [\@JohnHelveston](https://twitter.com/JohnHelveston) | <i class="bi-slack"></i> [Slack]({{< var slack >}}){target="_blank"}
+<i class="fas fa-user"></i> John Paul Helveston | <i class="far fa-calendar"></i> {{< var weekday >}}
+<i class="fas fa-university"></i> Science & Engineering Hall, 2830 | <i class="fa fa-map-marker-alt"></i> [{{< var room >}}]({{< var room_url >}})
+<i class="fas fa-phone"></i> +1 (202) 994-7173 | <i class="far fa-calendar-alt"></i> {{< var dates >}}
+<i class="fas fa-envelope"></i> [jpg@gwu.edu](mailto:jph@gwu.edu) | <i class="far fa-clock"></i> {{< var time >}}
+<i class="fab fa-twitter"></i> [\@JohnHelveston](https://twitter.com/JohnHelveston) | <i class="fab fa-slack"></i> [Slack]({{< var slack >}}){target="_blank"}
 </div>
 
-## Course Description
+# COVID-19 Precautions
+
+Please help us all stay safe so we can continue having in-person classes. Please wear a mask in class, and wash your hands often. If you're sick, stay home and send me a message, we'll work it out. Let's work together on this folks.
+
+# Remote attendance / class recording
+
+You should plan to attend class in person. I will only open a zoom for virtual attendance on an individual case-by-case basis for specific excusable absences (e.g. illness, family matters, etc.). Lectures will **not** be recorded. In-person attendance is critical as we will spend a lot of time working on problems and writing code during class. If you have any questions or need special accommodations, send me a message on slack and we can discuss.
+
+# Course Description
+
+## GW Bulletin Description (short)
+
+Analyzing data to inform design decisions in an uncertain, competitive, market, topics include consumer choice modeling, programming in [R](https://www.r-project.org/), survey design, conjoint analysis, optimization market simulation, and professional communication skills. 
+
+## Longer Description
 
 ```{r child = here::here("fragments", "description.qmd")}
 ```
@@ -36,7 +48,7 @@ Instructor | Course
 ```{r child = here::here("fragments", "learning-objectives.qmd")}
 ```
 
-## Pep Talk!
+# Pep Talk!
 
 Working in and learning a programming language can be as challenging as learning a new spoken language. Hadley Wickham (chief data scientist at RStudio and author of many amazing R packages you'll be using) [made this wise observation](https://r-posts.com/advice-to-young-and-old-programmers-a-conversation-with-hadley-wickham/):
 
@@ -44,7 +56,7 @@ Working in and learning a programming language can be as challenging as learning
 
 If you're finding yourself taking way too long hitting your head against a wall and not understanding, **take a break**, talk to classmates, ask questions in Slack, and try it again later.
 
-**I promise, you can do this!**
+**I promise, you can do this**
 
 # Required Texts & Materials
 
@@ -58,80 +70,70 @@ Go to the [Course Software](help/course-software.qmd) page for detailed instruct
 - RStudio (Desktop Version), a free IDE for R, which can be downloaded from [RStudio](https://rstudio.com/products/rstudio/download/)
 - We'll be using [Slack]({{< var slack >}}){target="_blank"} for most communication.
 
-## Texts
-
-The main textbook we will use for this course is "Programming for Analytics in R", by Professor Helveston. The book is available freely on the web at [https://p4a.jhelvy.com/](https://p4a.jhelvy.com/){target="_blank"}.
-
 # Assignments
 
-## Participation & Attendance
+## Class Participation
 
-**Attendance will be taken** and will be part of your participation grade.
-
-In-person attendance is critical as we will spend a lot of time working on problems and writing code during class. You should plan to attend class in person each week. 
-
-There will be no option for remote attendance (e.g. zoom), and class sessions will not be recorded. If you have any questions or need special accommodations, send me a message on slack and we can discuss. If you must miss class for an excused absence (e.g. medical issue), please message Professor Helveston and get notes from your fellows classmates.
-
-Multiple absences, inappropriate or unprofessional behavior during class (such as monopolizing discussions or being rude or disruptive), not participating in classroom exercises, and not being prepared for class will result in a poor score for attendance and participation.
-
-## Homework Assignments
-
-Homework assignments contain a mix of coding exercises and written exercises. They assess the material taught the week(s) they are assigned, and should take several hours to complete. **Start homeworks early**.
-
-Read the [Collaboration Policy](#collaboration-policy) about collaborating with fellow students on homeworks. While most problems must be worked on individually, some will be marked as "collaborative"; on these problems (and _only_ these problems), you may work on code with other students.
-
-Homeworks will be graded based on style (modularity, readability, commenting, etc.) and functionality (correctness on a series of tests). Your code should be properly annotated with comments that are well-placed, concise, and informative. Your assignments will be graded by an automated grader and the instructional team.
-
-## Readings
-
-In addition to weekly homework assignments, students are expected to read through the assigned weekly reading to prepare for the next class. Check the [schedule](schedule.html) for the reading assignments.
+Regular class attendance is **essential**. Much of the class time will be spent doing exercises and working with your team on your project. Multiple unexcused absences, inappropriate or unprofessional behavior during class (such as monopolizing discussions or being rude or disruptive), not participating in classroom exercises, and not being prepared for class will result in poor performance in this class.
 
 ## Quizzes
 
-There will be 7 quizzes given about once every other week immediately at the beginning of class. Make up quizzes will not be available if you miss it (except for excused absences). Please show up on time to class each week to ensure that you do not miss a quiz. Quizzes will cover material presented in previous classes and assignments during the weeks since the most-recent quiz. 
+There will be 5 quizzes given about once every other week immediately at the beginning of class. You will not be told in advance when there is a quiz, and make up quizzes will not be available if you miss it (except for excused absences). Please show up on time to class each week to ensure that you do not miss a quiz.
 
-Quizzes are **short** (10 minutes) and are designed to test for fluency and to demonstrate where additional study is needed. **Quizzes are low-stakes** - your worst one is dropped, and the rest count for a small portion of your final grade. If you do poorly on one or two, use that as feedback on where you need additional improvement.
+Quizzes will cover material presented in previous classes and assignments during the weeks since the most-recent quiz. Quizzes are **short** (5-10 minutes) and are designed to test for fluency and to demonstrate where additional study is needed. **Quizzes are low-stakes** - your worst one is dropped, and the rest count for a small portion of your final grade. If you do poorly on one or two, use that as feedback on where you need additional improvement.
 
 > **Why quiz at all?** Research shows that giving small quizzes throughout a class can dramatically help with *retention*. It's a phenomenon known as the "retrieval effect" - basically, you have to _practice_ remembering things, otherwise your brain won't remember them. The phenomenon and research on it is explained in detail in the book ["Make It Stick: The Science of Successful Learning,"](https://www.hup.harvard.edu/catalog.php?isbn=9780674729018) by Brown, Roediger, and McDaniel.
 
-## Exams
+## Assignments
 
-There will be one midterm exam covering the first 6 weeks of class, and a standard final exam during the final exam period at the end of the semester covering material from the entire semester. See the [schedule](schedule.html) for details.
+Each week, students will be assigned readings and exercises to prepare for the next class period. Students will need to submit reflections on these readings each week, which may involve answering some practice questions.
+These are graded using a check system:
+
+- ✔+ (110%): Responses shows phenomenal thought and engagement with the course content. I will not assign these often.
+- ✔ (100%): Responses are thoughtful, well-written, and show engagement with the course content. This is the expected level of performance.
+- ✔− (50%): Responses are hastily composed, too short, and/or only cursorily engages with the course content. This grade signals that you need to improve next time. I will _hopefully_ not assign these often.
+
+Notice that this is essentially a pass/fail system. I'm not grading your writing ability and I'm not counting the number of words you write. I'm looking for thoughtful engagement, that's all.
+
+## Final Project
+
+Throughout the semester, students will work in teams of 3-4 students towards a final project. The project is broken into multiple phases with key deliverables due throughout the semester. See the [Project Overview](project/0-overview.qmd) page for more details.
+
+## Final Exam
+
+The final exam is a take-home exam, and we will spend a portion of the last day of class going over the solutions together. 
 
 # Grading
 
-## Standard Grading
+## Category Breakdown
 
 Final grades will be calculated as follows:
 
-<div style="width:500px">
-Component                  | Weight | Notes
----------------------------|--------|----------------
-Participation / Attendance | 7%     | (Yes, I take attendance)
-Homeworks & Readings (13x) | 48%    | Lowest 1 dropped
-Quizzes (7x)               | 15%    | Lowest 2 dropped
-Midterm Exam               | 10%    |
-Final Exam                 | 20%    |
+<div style="width:550px">
+Item                  | Weight | Notes
+----------------------|--------|-------------------------------------
+Reflections           | 30 %   | Weekly assignment (10 x 3%, lowest dropped)
+Quizzes               | 9 %    | 5 quizzes, lowest dropped
+Project Proposal      | 6 %    | Teams of 3-4 students
+Survey Plan           | 5 %    |
+Pilot Survey          | 5 %    |
+Pilot Analysis        | 8 %    |
+Final Survey          | 5 %    |
+Final Analysis Report | 14 %   |
+Final Presentation    | 8 %    |
+Final Exam            | 10 %   | Take home exam
 </div>
 
 Here's a visual breakdown by category:
 
-```{r}
-#| echo: false
-#| label: grades
-#| fig.height: 3
-#| fig.align: 'left'
-
-library(tidyverse)
-library(cowplot)
+```{r grade-breakdown, echo=FALSE, fig.height=3, fig.align='left'}
 library(viridis)
 library(ggrepel)
 
 df <- data.frame(
     category = c(
-      'Participation', 'Homeworks & Readings', 'Quizzes', 'Midterm', 'Final'
-    ),
-    percent = c(7, 48, 15, 10, 20)) %>%
+      'Reflections', 'Quizzes', 'Project', 'Exam'),
+    percent = c(36, 8, 46, 10)) %>%
     arrange(desc(percent)) %>%
     mutate(
       cumpercent = cumsum(percent),
@@ -139,14 +141,10 @@ df <- data.frame(
       category = fct_reorder(category, percent))
 
 ggplot(df) +
-    geom_col(
-        aes(x = "", y = percent, fill = category),
-        width = 1.1, alpha = 0.8
-    ) +
-    geom_label_repel(
-        aes(x = "", y = label_y, label = category),
-        direction = 'y', label.padding = 0.25, segment.size = 0
-    ) +
+    geom_col(aes(x = "", y = percent, fill = category),
+             width = 1.1, alpha = 0.8) +
+    geom_label(data = df,
+               aes(x = "", y = label_y, label = category)) +
     coord_flip() +
     scale_y_continuous(expand = expansion(mult = c(0, 0.05))) +
     scale_fill_viridis(discrete = TRUE) +
@@ -155,30 +153,9 @@ ggplot(df) +
     labs(y = 'Percent of final grade', x = NULL)
 ```
 
-## AMG Grading
-
-An Alternative Minimum Grading (AMG) policy is available to everybody, but is designed specifically for students who struggle in the first part of the course, and then through sustained hard work and dedication manage to elevate their performance in the latter part of the course to a level that merits passing with a C (even if their Standard Grade might be lower than that).
-
-Student cannot "sign up" for AMG grading. Every student will be considered both for Standard Grading and AMG, and the instructor can choose to assign the AMG grade if a student's effort merits it. To qualify for AMG you must put forth sustained effort, which means meeting the following requirements:
-
-- You attend all class periods (with excused exceptions)
-- You complete all assignments
-- You do not violate the Collaboration Policy
-
-To compute your AMG score, first use the following to compute your raw score. If the resulting score is higher than a C, set it back to a C.
-
-<div style="width:300px">
-Course Component   | Weight
--------------------|----
-Best 10 Homeworks  | 40%
-Best 4 Quizzes     | 10%
-Midterm Exam       | 10%
-Final Exam         | 40%
-</div>
-
 ## Grading Scale
 
-<div style="width:350px">
+<div style="width:400px">
 Grade  | Range       | Grade | Range
 -------|-------------|-------|------------
 A      | 94 - 100%   | C     | 74 - 76.99%
@@ -209,13 +186,13 @@ All course communication will be managed through [Slack]({{< var slack >}}){targ
 - Ask for help with an assignment.
 - Send direct, private messages to each other or the instructors (just like email...but better!)
 
-> **Asking for help on Slack**: You can post questions on slack and receive quick responses. This also enables other students to see answers to common questions. Be specific - if your code has an error you don't understand, **include the code and the error message** in your question.
+**Asking for help on Slack**:
 
-## AMA Hours
+You can post questions on slack and receive quick responses. This also enables other students to see answers to common questions. Be specific - if your code has an error you don't understand, **include the code and the error message** in your question.
 
-I will hold regular "Ask Me Anything" hours each week. The specific hours will be posted on the course slack. During this period, you can come to my office (SEH 2830) and ask me anything. And I mean anything. Most of the time you may just have a question related to class, but I am also happy to discuss anything else with you regarding life, important decisions, career, art, music, dance, etc.
+## Office hours
 
-If the AMA hours don't work with your schedule, you can always schedule a zoom call with me using [this link](https://jhelvy.appointlet.com/b/professor-helveston). I'm available most days of the week.
+Scheduling a time to answer questions is hard, so rather than hold regular office hours, you can use [this link](https://jhelvy.appointlet.com/b/professor-helveston) to schedule a zoom call with me most days of the week.
 
 ## Tutoring hours
 
@@ -229,76 +206,32 @@ While the University Library is not a stand in for TAs, you can schedule a consu
 
 ## tl;dr
 
-- BE NICE
-- BE ON TIME
-- BE HONEST
-- DON'T CHEAT
-- SERIOUSLY: DON'T CHEAT
+- **BE NICE. BE HONEST. DON'T CHEAT.**
+- You get **5** late days - use them however you want, but you can't use more than **2** late days on any one assignment.
+- If you're not sure about something, talk with me and we'll figure it out.
 
 ## Late Policy
 
-Each students is allowed **3** late homework submission days - use them however you want, no questions asked. These are meant to cover illness, family emergencies, and religious holidays.
+Each students is allowed **5** late homework submission days - use them however you want, no questions asked. **No more than 2 days can be applied toward a single assignment**. Late days are meant to cover illness, family emergencies, and religious holidays. Assignments submitted more than 2 days after the due date will not be graded. In extreme circumstances, contact the instructor.
 
-Beyond those, assignments are due by 11:59pm on the assigned due date unless specified otherwise. Assignments submitted up to 24 hours past this deadline will be graded to a max of 50% of the available points. Assignments submitted beyond 24 hours past the deadline will not be graded and will be assigned a 0.
-
-If you need a special accommodation such as due to an illness, family emergency, or religious holidays, contact the instructor ahead of time.
-
-## Collaboration Policy
-
-<!-- This policy is mostly copied from the course 15-112 at Carnegie Mellon University -->
-
-Learning how to program is like learning how to ride a bicycle - to get better, you must practice writing code **yourself**. Therefore, we have a set of strict rules regarding what kind of collaboration is allowed, what counts as over-collaboration, and what counts as cheating.
-
-### Good Collaboration
-
-- Discussing which general concepts might be useful in solving a problem (conditionals, loops, etc.).
-- Asking for debugging help with code.
-- Sketch out algorithms on a whiteboard together.
-- To avoid copying the code, you should write up the solution together, discuss it, then erase the solution, wait a few minutes, and write up solutions individually.
-- Help each other debug specific parts of assignment code.
-- General discussion of course concepts.
-- Detailed explanations of example code on the course website.
-- Collaboratively solving a practice problem, with any level of co-writing code and co-debugging.
-
-### Over-collaboration
-
-Over-collaboration results in a warning on the first offense, and a penalty on later offenses. Examples include:
-
-- Explaining to a friend how to solve a problem in high-level terms by going through your own program line-by-line.
-- Helping a friend debug code by suggesting they use your own approach to the problem.
-- Collaborating with a student on an assignment and then _not_ including their name as a collaborator in the assignment writeup.
-- In the case that you have taken this course before, copying your own code from the previous time you took the course.
-
-### Cheating
+## Cheating
 
 Cheating results in a penalty on the first offense, and failing the course on the second offense. Cheating on assignments can include:
 
-- Copying or stealing any amount of code from someone currently in the class or someone who has taken the class before. Copying is never okay, whether the code is provided electronically, visually, audibly, or on paper.
+- Copying or stealing any amount of code from someone currently in the class or someone who has taken the class before.
+- NOTE: Copying is never okay, whether the code is provided electronically, visually, audibly, or on paper.
 - Providing code you have written for an assignment to anyone else in the class.
-- Finding code online and using it in the assignment (one exception: you may use code from the course website).
+- Finding code online and using it in the assignment. One exception: you may use code from the course website.
 - Putting code solutions from the course assignments online.
-- Receiving code-level assistance from someone or something not associated with the course.
+- Receiving code-level assistance from any person not associated with the course.
 - Getting someone else to write the assignment code for you.
-- Asking questions about the assignments on any online services outside of the course office hours or [slack]({{< var slack >}}).
+- Asking questions about the assignments on any online services outside of the course office hours / Slack.
 
 Cheating on quizzes, assignments, or the final project can include:
 
 - Referring to any external resources while completing the assignment (phones, notes, etc.).
 - Copying part of an answer off of another student's paper, even if it is very small.
 - Using solutions provided by students who previously took the course.
-
-### Use of chatGPT and other AI tools
-
-Large language models (LLMs) are capable of producing exact solutions to some of the coding problems assigned in this class. So we all basically have a solutions manual available for free.
-
-With this in mind, the use of AI tools is permitted as follows:
-
-- **Assignments 1-7**: Not permitted. Copying solutions from these engines and submitting them as your own for these assignments will be considered cheating. In this section of the course, we are building foundational skills in computational thinking and problem solving. If you don't master these skills, you won't be able to interpret what chatGPT is giving you, and you won't be able to test if it is wrong. Master these skills first - it is worth the effort.
-- **Assignments 8-13**: Permitted, with caveats. If you do use AI tools on these assignments, you must include the prompt(s) you used as well as changed to made to them to get better results to receive full credit.
-
-Learn to use tools like ChatGPT as a learning assistant - a tool to help you accomplish the task - rather than just a solutions manual. One version of using it makes you a better and more efficient coder, the other robs you of that.
-
-In the follow-on course to this one ([EMSE 4572: Exploratory Data Analysis](https://eda.seas.gwu.edu/)), the use of AI engines will be allowed to support your projects.
 
 ### Penalties
 
@@ -309,18 +242,6 @@ Violations will be reported to the [Office of Student Rights & Responsibilities]
 - Automatically failing the course.
 
 Depending on the student's prior academic history, violations may also be accompanied by a letter to the Dean of Student Affairs, again at the instructors' discretion. This can lead to university-level penalties, such as being suspended or expelled.
-
-### Plagiarism Detection
-
-Programs are naturally structured, which makes them **very easy** to compare for plagiarism. Automated plagiarism detection systems make this process even easier. [Watch this video](http://www.kosbie.net/cmu/spring-13/15-112/automated-plagiarism-detector-demo.mp4) showing plagiarism detection software in action (this example is using Python code, but this also works for R code).
-    
-**In short, if you copy code, we will know - don't copy code!**
-
-### Grace Period
-
-College is a time when you do a lot of learning. Sometimes, you might make bad decisions or mistakes. The most important thing for you to do is to learn from your mistakes, to constantly grow, and become a better person.
-
-Sometimes, students panic and copy code right before the deadline, then regret what they did afterwards. Therefore, you may rescind any homework submission for up to 24 hours after the deadline with no questions asked. Simply email the course instructors asking to delete the submission in question, and we will do so. Deleted submissions will not be considered during plagiarism detection, though of course they will also not be graded. However, it will always be better to get a 0 (or partial credit) on an assignment than to get a cheating violation!
 
 ## Children in class
 
@@ -355,11 +276,7 @@ Any form of sexual harassment or violence will not be excused or tolerated at GW
 
 All course materials available on the course website are developed open source - you are welcome to post and share them following the licensing guidelines listed in the [license](LICENSE.qmd) page.
 
-However, all **solutions** to assignments and quizzes are proprietary. Don't post them online or try to sell them - this is a violation of the [student code of conduct](https://studentconduct.gwu.edu/code-student-conduct) and it is also a violation of the class cheating policy.
-
-## Recording in Class
-
-You are free to record class periods (audio and / or video) for your own personal study use and only for your personal study use. If you do record a class period, you are prohibited from posting or sharing the content online or with others.
+However, all **solutions** to assignments and quizzes are proprietary. Don't post them online or try to sell them - this is a violation of the [student code of conduct](https://studentconduct.gwu.edu/code-student-conduct).
 
 ## What To Do if the Instructor Does Not Arrive
 
@@ -389,27 +306,24 @@ Academic dishonesty is defined as cheating of any kind, including misrepresentin
 
 In addition to the formal code of academic integrity, the instructor expects that students will treat this course with the level of professionalism required in the workplace. Remember that real firms are sponsoring student projects throughout the semester; in a workplace setting, these firms would be paying clients for the analyses being conducted. This course prepares students to succeed in the workplace, and maintaining a high degree of professionalism is expected.
 
-# Cute Animals
+# Super Heros
 
-::: {.grid}
+<div class = "row">
 
-::: {.g-col-4}
+<div class = "col-md-4">
+<img src="images/prof_x.gif">
+</div>
 
-<img src="images/cute_penguin.gif" width=100%>
+<div class = "col-md-8">
 
-:::
-
-::: {.g-col-8}
-
-Once you have read this entire syllabus and viewed the [course schedule](schedule.qmd), please send me a picture of _cute_ picture of your favorite animal in a direct message on Slack.
+Once you have read this entire syllabus and viewed the [course schedule](schedule.qmd), please send me a picture of your favorite super hero in a direct message on Slack.
 
 For real.
 
 Brownie points if it's animated.
 
-:::
-
-:::
+</div>
+</div>
 
 ---
 
@@ -417,5 +331,6 @@ Brownie points if it's animated.
 
 Some content on this page is inspired by and / or modified from other sources:
 
-- The "Pep Talk" and "Cute Animals" sections are inspired by [Andrew Heiss's courses](https://www.andrewheiss.com/teaching/).
+- The "Pep Talk" and "Super Heros" sections are inspired by Andrew Heiss's course [Program Evaluation For Public Service](https://evalf19.classes.andrewheiss.com/syllabus/)
 - The cheating policy is modified from the course [15-112](http://www.kosbie.net/cmu/fall-19/15-112/) at Carnegie Mellon University
+
