--- a/fragments/hw.qmd
+++ b/fragments/hw.qmd
@@ -1,15 +1,11 @@
-```{r echo=FALSE}
-library(tidyverse)
-library(fontawesome)
-
+```{r}
 due <- get_schedule() %>%
-  mutate(assign_due = format(assign_due, format = "%B %d")) %>% 
-  filter(assign_n == params$number) %>%
-  pull(assign_due) %>% 
+  filter(n_final == params$number) %>%
+  pull(due_final) %>%
   paste0(" by 11:59pm")
 
 url_template <- paste0(
-  'https://madd.seas.gwu.edu/2022-Fall/templates/hw',
+  'https://madd.seas.gwu.edu/2023-Fall/templates/hw',
   params$number, '.zip')
 ```
 
