--- a/syllabus.qmd
+++ b/syllabus.qmd
@@ -141,8 +141,11 @@ df <- data.frame(
 ggplot(df) +
     geom_col(aes(x = "", y = percent, fill = category),
              width = 1.1, alpha = 0.8) +
-    geom_label(data = df,
-               aes(x = "", y = label_y, label = category)) +
+    geom_label_repel(
+        data = df,
+        aes(x = "", y = label_y, label = category), 
+        direction = 'y'
+    ) +
     coord_flip() +
     scale_y_continuous(expand = expansion(mult = c(0, 0.05))) +
     scale_fill_viridis(discrete = TRUE) +
