--- a/class/6-utility-models.qmd
+++ b/class/6-utility-models.qmd
@@ -1,7 +1,12 @@
 ---
 title: "Utility Models"
+toc: false
+execute:
+  echo: false
+  warning: false
+  message: false
 params:
-  class: "7-utility-models"
+  class: "6-utility-models"
   logitrcars: TRUE
   formr4conjoint: FALSE
 ---
