--- a/fragments/project.qmd
+++ b/fragments/project.qmd
@@ -1,7 +1,7 @@
 ```{r}
 due <- get_schedule() %>%
-  filter(n_final == params$number) %>%
-  pull(due_final) %>%
+  filter(n_project == params$number) %>%
+  pull(due_project) %>%
   paste0(" by 11:59pm")
 ```
 
