--- a/class/11-heterogeneity.qmd
+++ b/class/11-heterogeneity.qmd
@@ -1,13 +1,13 @@
 ---
-title: "Getting Started"
+title: "Heterogeneity"
 toc: false
 execute:
   echo: false
   warning: false
   message: false
 params:
-  class: "1-getting-started"
-  logitrcars: FALSE
+  class: "11-heterogeneity"
+  logitrcars: TRUE
   formr4conjoint: FALSE
 ---
 
