--- a/class/13-communicating-results.qmd
+++ b/class/13-communicating-results.qmd
@@ -1,7 +1,12 @@
 ---
 title: "Communicating Results"
+toc: false
+execute:
+  echo: false
+  warning: false
+  message: false
 params:
-  class: "15-communicating-results"
+  class: "13-communicating-results"
   logitrcars: FALSE
   formr4conjoint: FALSE
 ---
