--- a/class/4-intro-to-formr.qmd
+++ b/class/4-intro-to-formr.qmd
@@ -1,5 +1,10 @@
 ---
 title: "Intro to formr"
+toc: false
+execute:
+  echo: false
+  warning: false
+  message: false
 params:
   class: "4-intro-to-formr"
   logitrcars: FALSE
