--- a/class/5-conjoint-questions.qmd
+++ b/class/5-conjoint-questions.qmd
@@ -1,7 +1,12 @@
 ---
 title: "Conjoint Questions"
+toc: false
+execute:
+  echo: false
+  warning: false
+  message: false
 params:
-  class: "6-conjoint-questions"
+  class: "5-conjoint-questions"
   logitrcars: FALSE
   formr4conjoint: FALSE
 ---
