--- a/class/7-optimization-mle.qmd
+++ b/class/7-optimization-mle.qmd
@@ -1,7 +1,12 @@
 ---
 title: "Optimization & MLE"
+toc: false
+execute:
+  echo: false
+  warning: false
+  message: false
 params:
-  class: "8-optimization-mle"
+  class: "7-optimization-mle"
   logitrcars: TRUE
   formr4conjoint: TRUE
 ---
