--- a/project/2-survey-plan.qmd
+++ b/project/2-survey-plan.qmd
@@ -1,8 +1,11 @@
 ---
 title: "Survey Plan"
 toc: true
-toc-title: Table of contents
-toc-location: left
+toc-location: right
+execute:
+  echo: false
+  warning: false
+  message: false
 params:
   number: 2
   weight: '4%'
