--- a/project/3-pilot-survey.qmd
+++ b/project/3-pilot-survey.qmd
@@ -1,8 +1,11 @@
 ---
 title: "Pilot Survey"
 toc: true
-toc-title: Table of contents
-toc-location: left
+toc-location: right
+execute:
+  echo: false
+  warning: false
+  message: false
 params:
   number: 3
   weight: '4%'
