--- a/project/4-pilot-analysis.qmd
+++ b/project/4-pilot-analysis.qmd
@@ -1,8 +1,11 @@
 ---
 title: "Pilot Analysis"
 toc: true
-toc-title: Table of contents
-toc-location: left
+toc-location: right
+execute:
+  echo: false
+  warning: false
+  message: false
 params:
   number: 4
   weight: '9%'
