--- a/project/5-final-survey.qmd
+++ b/project/5-final-survey.qmd
@@ -1,8 +1,11 @@
 ---
 title: "Final Survey"
 toc: true
-toc-title: Table of contents
-toc-location: left
+toc-location: right
+execute:
+  echo: false
+  warning: false
+  message: false
 params:
   number: 5
   weight: '5%'
