--- a/project/6-final-analysis.qmd
+++ b/project/6-final-analysis.qmd
@@ -1,8 +1,11 @@
 ---
 title: "Final Analysis"
 toc: true
-toc-title: Table of contents
-toc-location: left
+toc-location: right
+execute:
+  echo: false
+  warning: false
+  message: false
 params:
   number: 6
   weight: '14%'
