--- a/project/examples.qmd
+++ b/project/examples.qmd
@@ -22,7 +22,7 @@ As inspiration for your final projects, check out these prior exploratory data a
 
 ::: {.g-col-8}
 
-### [Fall 2021 Showcase](https://madd.seas.gwu.edu/showcase-2021-fall.html)
+### [Fall 2021 Showcase](https://madd.seas.gwu.edu/showcase/2021-fall.html)
 
 Projects from the fall 2021 semester of this class.
 
@@ -40,7 +40,7 @@ Projects from the fall 2021 semester of this class.
 
 ::: {.g-col-8}
 
-### [Fall 2022 Showcase](https://madd.seas.gwu.edu/showcase-2022-fall.html)
+### [Fall 2022 Showcase](https://madd.seas.gwu.edu/showcase/2022-fall.html)
 
 Projects from the fall 2022 semester of this class.
 
