--- a/fragments/project.qmd
+++ b/fragments/project.qmd
@@ -1,11 +1,17 @@
 ```{r}
+#| include: false
+
+source(here::here("_common.R"))
+
 due <- get_schedule() %>%
-  filter(n_project == params$number) %>%
-  pull(due_project) %>%
+  filter(n_final == params$number) %>%
+  pull(due_final) %>%
   paste0(" by 11:59pm")
 ```
 
 > **Due**: `r due`
+>
+> **Submission Instructions**: Render your .qmd file, then create a zip file of all the files in your R project folder for this assignment and submit it on the corresponding assignment submission on Blackboard. **Only one person from your team should submit the report**.
 >
 > **Weight**: This assignment is worth `r params$weight` of your final grade.
 >
