added quiz to schedule

--- a/schedule.qmd
+++ b/schedule.qmd
@@ -24,12 +24,12 @@ done <- schedule %>%
       `Weekly HW` = Assign
   ) %>%
   select(
-      Week, Date = Date_md, Class, `Weekly HW`, `Final Projects`
+      Week, Date = Date_md, Quiz, Class, `Weekly HW`, `Final Projects`
   ) %>%
   kable(format = 'html', escape = FALSE,
-        align = c('c', 'c', 'l', 'l', 'l')) %>%
+        align = c('c', 'c', 'c', 'l', 'l', 'l')) %>%
   kable_styling(full_width = F, bootstrap_options = c("striped", "hover")) %>%
-  column_spec(column = 3, width = '22em') 
+  column_spec(column = 4, width = '22em') 
 
 # Add highlighting based on current week if we're still in the semester
 highlight <- which(Sys.Date() > (schedule$Date))
