--- a/hw/1-data-wrangling.qmd
+++ b/hw/1-data-wrangling.qmd
@@ -8,23 +8,23 @@ params:
 ```{r child = here::here("fragments", "hw.qmd")}
 ```
 
-# 1. Software
+### 1. Software
 
 If you haven't yet, go to the [Software](../software.html) page and install all the software we'll need for this course. You'll need these tools for this assignment.
 
-# 2. Getting Organized
+### 2. Getting Organized
 
 Download and edit [this template](`r url_template`) when working through this assignment. This is for now mostly a blank file that you can use to jot down examples and play with code.
 
-# 3. Readings
+### 3. Readings
 
-Open up a notebook (physical, digital...whatever you take notes in best), and **take notes** while you go through these readinygs:
+Open up a notebook (physical, digital...whatever you take notes in best), and **take notes** while you go through these readings:
 
 1. **Getting Familiar with the Course**: Follow [Snoop's advice](https://www.youtube.com/watch?v=Tnlaokj1opA) and read the entire [Course Syllabus](../syllabus.html) (actually read the whole thing). Then review the [schedule](../schedule.html) and make sure to note important upcoming deadlines.
 2. **`r fa('r-project')` Basics** [Optional] Read through Lessons [1 "Getting Started"](https://jhelvy.github.io/r4aPrimer/L1-getting-started.html) and [2 "Data Types & Vectors"](https://jhelvy.github.io/r4aPrimer/L2-data-types-vectors.html) in the [R4A Primer](https://jhelvy.github.io/r4aPrimer/index.html) to get more familiar with `r fa('r-project')` basics.
 3. **Data Frames & Data Wrangling** Reading through Lessons [3 "Data Frames"](https://jhelvy.github.io/r4aPrimer/L3-data-frames.html) and [4 "Data Wrangling"](https://jhelvy.github.io/r4aPrimer/L4-data-wrangling.html) in the [R4A Primer](https://jhelvy.github.io/r4aPrimer/index.html) to get more familiar with working with data sets in `r fa('r-project')`.
 
-# 4. Exercises
+### 4. Exercises
 
 RStudio offers many excellent [primers](https://rstudio.cloud/learn/primers/) to get up and running quickly in `r fa('r-project')`. Running through these exercises will help prepare you for class next week:
 
@@ -33,7 +33,7 @@ RStudio offers many excellent [primers](https://rstudio.cloud/learn/primers/) to
 3. [Isolating Data with dplyr](https://rstudio.cloud/learn/primers/2.2)
 4. [Derive Information with dplyr](https://rstudio.cloud/learn/primers/2.3)
 
-# 5. Reflect
+### 5. Reflect
 
 Reflect on what you've learned while going through these readings and exercises. Is there anything that jumped out at you? Anything you found particularly interesting or confusing? Write at least a paragraph in your ``r hw_file`` file, and include at least one question. The teaching team will review the questions we get and will try to answer them either in Slack or in class.
 
@@ -41,9 +41,9 @@ If you're unsure where to start with a reflection, try filling out this template
 
 > "I used to think ______, now I think ______ 🤔"
 
-# 6. Submit
+### 6. Submit
 
-Create a zip file of all the files in your R project folder for this assignment and submit it on the corresponding assignment submission on Blackboard. (Ignore the instructions at the [top of this page]() - that will be the instructions for all future assignments).
+To submit your assignment, create a zip file of all the files in your R project folder for this assignment and submit it on the corresponding assignment submission on Blackboard.
 
 ----
 
