--- a/class/3-quarto-plotting.qmd
+++ b/class/3-quarto-plotting.qmd
@@ -1,12 +1,12 @@
 ---
-title: "RMarkdown & Plotting"
+title: "Quarto & Plotting"
 toc: false
 execute:
   echo: false
   warning: false
   message: false
 params:
-  class: "3-rmarkdown-plotting"
+  class: "3-quarto-plotting"
   logitrcars: FALSE
   formr4conjoint: FALSE
 ---
