--- a/class/10-doe-power-analysis.qmd
+++ b/class/10-doe-power-analysis.qmd
@@ -1,12 +1,12 @@
 ---
-title: "Communicating Results"
+title: "DOE & Power Analysis"
 toc: false
 execute:
   echo: false
   warning: false
   message: false
 params:
-  class: "13-communicating-results"
+  class: "10-doe-power-analysis"
   logitrcars: FALSE
   formr4conjoint: FALSE
 ---
