--- a/class/12-heterogeneity.qmd
+++ b/class/12-heterogeneity.qmd
@@ -1,13 +1,13 @@
 ---
-title: "Final Presentations"
+title: "Heterogeneity"
 toc: false
 execute:
   echo: false
   warning: false
   message: false
 params:
-  class: "14-final-presentations"
-  logitrcars: FALSE
+  class: "12-heterogeneity"
+  logitrcars: TRUE
   formr4conjoint: FALSE
 ---
 
