--- a/class/7-utility-models.qmd
+++ b/class/7-utility-models.qmd
@@ -1,13 +1,13 @@
 ---
-title: "Conjoint Questions"
+title: "Utility Models"
 toc: false
 execute:
   echo: false
   warning: false
   message: false
 params:
-  class: "5-conjoint-questions"
-  logitrcars: FALSE
+  class: "7-utility-models"
+  logitrcars: TRUE
   formr4conjoint: FALSE
 ---
 
