--- a/class/15-communicating-results.qmd
+++ b/class/15-communicating-results.qmd
@@ -1,13 +1,13 @@
 ---
-title: "Exam Review & Final Analysis Overview"
+title: "Communicating Results"
 toc: false
 execute:
   echo: false
   warning: false
   message: false
 params:
-  class: "12-class-review"
-  logitrcars: TRUE
+  class: "15-communicating-results"
+  logitrcars: FALSE
   formr4conjoint: FALSE
 ---
 
