--- a/hw/2-quarto-plotting.qmd
+++ b/hw/2-quarto-plotting.qmd
@@ -8,20 +8,25 @@ params:
 ```{r child = here::here("fragments", "hw.qmd")}
 ```
 
-### 1. Getting Organized
+# 1. Get Organized
 
-Download and edit [this template](`r url_template`) when working through this assignment. This is for now mostly a blank file that you can use to jot down examples and play with code.
+Follow these instructions:
 
-Notice that this week's template is a `.qmd` file, which is called a "Quarto Markdown" file (or just "Quarto" file). You'll learn about what these files are and how they are different from .R files in the readings for this week. From now on, we'll mostly be using Quarto files for our assignments (including your project deliverables).
+1. Download and edit [this template](`r url_template`).
+2. Unzip the template folder. **Make sure you actually unzip it**! (in Windows, right-click it and use "extract all")
+3. Open the .Rproj file to open RStudio.
+4. Inside RStudio, open the ``r hw_file`` file, take notes, and write some example code as you go through the readings / exercises below.
 
-### 2. Readings
+> Notice that this week's template is a `.qmd` file, which is called a "Quarto Markdown" file (or just "Quarto" file). You'll learn about what these files are and how they are different from .R files in the readings for this week. From now on, we'll mostly be using Quarto files for our assignments (including your project deliverables).
+
+# 2. Readings
 
 Open up a notebook (physical, digital...whatever you take notes in best), and **take notes** while you go through these readings:
 
 1. Lesson [5 "Data Visualization"](https://jhelvy.github.io/r4aPrimer/L5-data-visualization.html)
 2. Lesson [6 "Reproducible Reporting"](https://jhelvy.github.io/r4aPrimer/L6-reproducible-reporting.html)
 
-### 3. Exercises
+# 3. Exercises
 
 Running through these RStudio Primer exercises to practice making charts with ggplot - we'll do more of this in class next week:
 
@@ -30,7 +35,7 @@ Running through these RStudio Primer exercises to practice making charts with gg
 3. [Scatterplots](https://rstudio.cloud/learn/primers/3.5)
 4. [Line Charts](https://rstudio.cloud/learn/primers/3.6)
 
-### 4. Reflect
+# 4. Reflect
 
 Reflect on what you've learned while going through these readings and exercises. Is there anything that jumped out at you? Anything you found particularly interesting or confusing? Write at least a paragraph in your ``r hw_file`` file, and include at least one question. The teaching team will review the questions we get and will try to answer them either in Slack or in class.
 
@@ -38,7 +43,7 @@ If you're unsure where to start with a reflection, try filling out this template
 
 > "I used to think ______, now I think ______ 🤔"
 
-### 5. Submit
+# 5. Submit
 
 To submit your assignment, follow these instructions:
 
